changes/4.2/535b3ddc285825c058cef3436a9aa207edffa6cd
x86: kaslr: fix build due to missing ALIGN definition

Fengguang's bot reported that 4545c898 ("x86: introduce kaslr_offset()") broke
randconfig build

   In file included from arch/x86/xen/vga.c:5:0:
   arch/x86/include/asm/setup.h: In function 'kaslr_offset':
>> arch/x86/include/asm/setup.h:77:2: error: implicit declaration of function 'ALIGN' [-Werror=implicit-function-declaration]
     return (unsigned long)&_text - __START_KERNEL;
     ^
Fix that by making setup.h self-sufficient by explicitly including
linux/kernel.h, which is needed for ALIGN() (which is what __START_KERNEL
contains in its expansion).

Reported-by: fengguang.wu@intel.com
Signed-off-by: Jiri Kosina <jkosina@suse.cz>

